syntax = "proto3";
package fusionchain.policy;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "fusionchain/policy/params.proto";
import "fusionchain/policy/action.proto";
import "fusionchain/policy/policy.proto";

option go_package = "github.com/qredo/fusionchain/x/policy/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/fusionchain/policy/params";
  }
  // Queries a list of Verify items.
  rpc Verify(QueryVerifyRequest) returns (QueryVerifyResponse) {
    option (google.api.http).get =
        "/fusionchain/policy/verify/{policy}/{payload}";
  }

  // Queries a list of Actions items.
  rpc Actions(QueryActionsRequest) returns (QueryActionsResponse) {
    option (google.api.http).get = "/fusionchain/policy/actions";
  }

  // Queries a list of Policies items.
  rpc Policies(QueryPoliciesRequest) returns (QueryPoliciesResponse) {
    option (google.api.http).get = "/fusionchain/policy/policies";
  }

  // Queries a list of PolicyById items.
  rpc PolicyById(QueryPolicyByIdRequest) returns (QueryPolicyByIdResponse) {
    option (google.api.http).get = "/fusionchain/policy/policy_by_id";
  }

  // Queries a list of Actions items by one participant address.
  rpc ActionsByAddress(QueryActionsByAddressRequest)
      returns (QueryActionsByAddressResponse) {
    option (google.api.http).get = "/fusionchain/policy/actions_by_address";
  }

  // this line is used by starport scaffolding # 1
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

message QueryVerifyRequest {
  string policy = 1;
  string payload = 2;
}

message QueryVerifyResponse { bool result = 1; }

message QueryActionsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryActionsResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated Action actions = 2 [ (gogoproto.nullable) = false ];
}

message PolicyResponse {
  Policy policy = 1;
  google.protobuf.Any metadata = 2;
}

message QueryPoliciesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryPoliciesResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated PolicyResponse policies = 2 [ (gogoproto.nullable) = false ];
}

message QueryPolicyByIdRequest { uint64 id = 1; }

message QueryPolicyByIdResponse { PolicyResponse policy = 1; }

message QueryActionsByAddressRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
  string address = 2;
  ActionStatus status = 3;
}

message QueryActionsByAddressResponse {
  cosmos.base.query.v1beta1.PageResponse pagination = 1;
  repeated Action actions = 2;
}
